# IthacaPlayer

./: CMakeLists.txt  DESIGN3.md  DESIGN4.md  DESIGN5.md  Grab-Files.ps1  IthacaPlayer202509041758.txt  IthacaPlayer202509041857.txt  IthacaPlayer202509041912.txt  IthacaPlayer202509041920.txt  IthacaPlayer202509041934.txt  IthacaPlayer202509042000.txt  IthacaPlayer202509042028.txt  IthacaPlayer202509042102.txt  IthacaPlayer202509042117.txt  IthacaPlayer202509042134.txt  IthacaPlayer202509042138.txt  IthacaPlayer202509042226.txt  IthacaPlayer202509042239.txt  IthacaPlayer202509042346.txt  IthacaPlayer202509050130.txt  IthacaPlayer202509050206.txt  IthacaPlayer202509050840.txt  IthacaPlayer202509050954.txt  IthacaPlayer202509050958.txt  IthacaPlayer202509051118.txt  IthacaPlayer202509051404.txt  IthacaPlayer202509060735.txt  IthacaPlayer202509060757.txt  IthacaPlayer202509060822.txt  JUCE-BUILD.md  Logger.cpp  Logger.h  MidiStateManager.cpp  MidiStateManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  SAMPLES.md  (+6 more)
DESIGNS/: DESIGN.md  DESIGN2.md  DESIGN6.md  DESIGN7.md  README.md
IthacaSources/Common/: Config.h
IthacaSources/Editor/: IthacaEditor.cpp  IthacaEditor.h
IthacaSources/Logger/: DebugLogger.h
IthacaSources/Processor/: IthacaProcessor.cpp  IthacaProcessor.h
decorators/: BinaryData.cpp  BinaryData.h
